# vello-llama

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  catalog.json  docker-compose.yml  vello-installer  vello-llama-local
.github/workflows/: ci.yml
catalogs/: default.toml
clients/: crush.json  opencode.json
docker/: Dockerfile.llama-cpu  Dockerfile.llama-cuda
docs/: CNAME  index.html
scripts/: check-no-unwrap.sh  e2e-cpu.sh  e2e.sh  pr-comment.sh  quality.sh
vello-cli/: Cargo.toml
vello-cli/src/: catalog.rs  commands.rs  diagnostics.rs  docker.rs  doctor.rs  fit.rs  main.rs  paths.rs  profile.rs  recommend.rs  resolver.rs  schema.rs  style.rs  system.rs
