[package]
name = "vello"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Curated LLM catalog manager for the vello-llama-local stack"
license = "Apache-2.0"

[[bin]]
name = "vello"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
